# feedbackd

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  Event-naming-spec-0.0.0.md  Feedback-theme-spec-0.0.0.md  NEWS  README.md  meson.build  meson_options.txt  run.in
build-aux/: post_install.py
cli/: fbcli.c  meson.build
data/: default.json  meson.build  org.sigxcpu.Feedback.service.in  org.sigxcpu.Feedback.xml  org.sigxcpu.feedbackd.gschema.xml
debian/: changelog  control  copyright  feedbackd.install  feedbackd.maintscript  feedbackd.postinst  feedbackd.udev  gbp.conf  libfeedback-0.0-0.install  libfeedback-0.0-0.symbols  libfeedback-dev.install  libfeedback-dev.links  rules
debian/tests/: build-test  build-test.c  control
doc/: Event-naming-spec-0.0.0.md  Feedback-theme-spec-0.0.0.md  build-howto.md  build-howto.xml  fbcli.rst  fbcli.xml  fbd-theme-validate.rst  feedbackd.rst  feedbackd.xml  initialization.md  libfeedback-docs.xml  libfeedback.toml.in  meson.build  overview.md  overview.xml
doc/xml/: gtkdocentities.ent.in  meson.build
examples/: example.py
libfeedback/: lfb-event.c  lfb-event.h  lfb-names.h  lfb-priv.h  libfeedback.c  libfeedback.h  libfeedback.syms  meson.build
src/: fbd-binder.c  fbd-binder.h  fbd-dev-led-multicolor.c  fbd-dev-led-multicolor.h  fbd-dev-led-priv.h  fbd-dev-led.c  fbd-dev-led.h  fbd-dev-leds.c  fbd-dev-leds.h  fbd-dev-sound.c  fbd-dev-sound.h  fbd-dev-vibra.c  fbd-droid-leds-backend-aidl.c  fbd-droid-leds-backend-aidl.h  fbd-droid-leds-backend-hidl.c  fbd-droid-leds-backend-hidl.h  fbd-droid-leds-backend-sysfs.c  fbd-droid-leds-backend-sysfs.h  fbd-droid-leds-backend.c  fbd-droid-leds-backend.h  fbd-droid-leds.c  fbd-droid-leds.h  fbd-droid-vibra-backend-aidl.c  fbd-droid-vibra-backend-aidl.h  fbd-droid-vibra-backend-hidl.c  fbd-droid-vibra-backend-hidl.h  fbd-droid-vibra-backend-sysfs.c  fbd-droid-vibra-backend-sysfs.h  fbd-droid-vibra-backend.c  fbd-droid-vibra-backend.h  fbd-droid-vibra.c  fbd-droid-vibra.h  fbd-error.c  fbd-event.c  fbd-event.h  fbd-feedback-base.c  fbd-feedback-base.h  fbd-feedback-dummy.c  fbd-feedback-dummy.h  fbd-feedback-led.c  (+24 more)
tests/: meson.build  test-fbd-event.c  test-fbd-feedback-profile.c  test-fbd-feedback-theme.c  test-fbd-theme-expander.c  test-lfb-event.c  test-lfb-integration.c
tests/data/: test.json
tests/data/parent/: base.json  test.json
tests/data/user-config/feedbackd/themes/: custom.json
tests/data/xdg-data/feedbackd/themes/: chainup.json  default.json  replace.json
tests/services/: meson.build  org.sigxcpu.Feedback.service.in
