option('introspection', type: 'feature', value: 'auto')
option('vapi', type: 'boolean', value: true)

option('daemon',
       type: 'boolean', value: true,
       description: 'Whether to build the daeon')
option('gtk_doc',
       type: 'boolean', value: false,
       description: 'Whether to generate the API reference for Handy')
option('tests',
       type: 'boolean', value: true,
       description: 'Whether to compile unit tests')
